--- a/src/components/Separator/Separator.css
+++ b/src/components/Separator/Separator.css
@@ -13,6 +13,6 @@
 
 @media (prefers-color-scheme: dark) {
     .separator {
-        background-color: var(--color-light-grey);
+        background-color: var(--color-medium-grey);
     }
 }
