--- a/src/components/ColorPalette/ColorPalette.css
+++ b/src/components/ColorPalette/ColorPalette.css
@@ -13,15 +13,16 @@
 }
 
 /* Color container styles */
-.color-palette__main-container__colors-container{
-    display: flex;
-    justify-items: center;
-    align-items: center;
-    gap: 0.6rem;
+.color-palette__main-container__colors-container {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-auto-flow: column;
+    gap: 0.6rem 1rem;
 }
 
 /* Color styles */
-.color-palette__main-container__colors-container__color{
+.color-palette__main-container__colors-container__color {
     width: 2rem;
     height: 2rem;
     outline: var(--outline-width) solid transparent;
@@ -29,13 +30,13 @@
 }
 
 @media (prefers-color-scheme: light) {
-    .color-palette__main-container__colors-container__color--selected{
-       outline: var(--outline-width) solid var(--color-darker-grey);
+    .color-palette__main-container__colors-container__color--selected {
+        outline: var(--outline-width) solid var(--color-darker-grey);
     }
 }
 
 @media (prefers-color-scheme: dark) {
-    .color-palette__main-container__colors-container__color--selected{
-       outline: var(--outline-width) solid var(--color-lighter-grey);
+    .color-palette__main-container__colors-container__color--selected {
+        outline: var(--outline-width) solid var(--color-lighter-grey);
     }
 }
