test: snapshot of the note edit content container

--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -17,7 +17,7 @@
 
 /* Input container styles */
 .input__main-container__input-container {
-    padding: 0.8rem var(--input--horizontal-padding);
+    padding: var(--input--vertical-padding) var(--input--horizontal-padding);
     grid-column: 1/-1;
     box-sizing: border-box;
     display: grid;
@@ -45,11 +45,12 @@
     border: none;
     outline: none;
     width: 100%;
+    text-overflow: ellipsis;
 }
 
 .input__main-container__input-container:has(.input__main-container__input-container__input:focus),
 .input__main-container__input-container:has(.input__main-container__input-container__input:focus-visible) {
-    outline: var(--outline-width) solid var(--color-dark-primary);
+    outline-color: var(--color-dark-primary);
 }
 
 /* Input error container styles */
