--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,13 @@
     --opacity-transition-duration: 0.25s;
     --animation-move-duration: 0.5s;
     --input--horizontal-padding: 1.2rem;
+    --input--vertical-padding: 0.8rem;
+    --area--horizontal-padding: 1.2rem;
+    --area--vertical-padding: 0.8rem;
     --outline-width: 0.2rem;
     --border-width: 0.2rem;
+    --scrollbar--width: 0.65rem;
+    --scrollbar--border-radius: 4px;
     --icon--big--size: 2.6rem;
     --icon--big--weight: 500;
     --icon--medium--size: 2.2rem;
@@ -54,6 +59,9 @@
     --text--input--font-size: 1.6rem;
     --text--input--font-weight: 300;
     --text--input--letter-spacing: 0;
+    --text--area--font-size: 1.6rem;
+    --text--area--font-weight: 300;
+    --text--area--letter-spacing: 0;
     --text--button--primary--font-size: 1.6rem;
     --text--button--primary--font-weight: 700;
     --text--button--primary--letter-spacing: 2px;
@@ -111,6 +119,25 @@ html, body {
 /* List */
 li {
     list-style-type: none;
+}
+
+/* Scrollbar */
+::-webkit-scrollbar {
+    width: var(--scrollbar--width);
+}
+
+::-webkit-scrollbar-track {
+    background: var(--color-dark-grey);
+    border-radius: var(--scrollbar--border-radius);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--color-medium-grey);
+    border-radius: var(--scrollbar--border-radius);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--color-light-grey);
 }
 
 /* Dark Mode */
