--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -4,14 +4,13 @@
     grid-column: 1/-1;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto 1fr;
+    grid-template-rows: min-content 1fr;
     justify-items: center;
     align-items: center;
     background-color: var(--color-medium-grey);
     gap: 1px;
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
 }
 
 /* Menu container styles */
@@ -37,11 +36,6 @@
     grid-column: 3/6;
 }
 
-/* Note styles */
-.dashboard__main-container__notes-container__content-container__content {
-    animation: appear-and-move-a-bit-up var(--animation-move-duration) ease-in-out forwards;
-}
-
 /* Note container styles */
 .dashboard__main-container__note-container {
     z-index: var(--dashboard--note-container--z-index);
@@ -63,13 +57,15 @@
 .dashboard__main-container__notes-container {
     grid-row: 1/-1;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: subgrid;
     grid-template-rows: subgrid;
     place-items: center;
     gap: 2.4rem;
     padding: 1.2rem 2rem;
     width: 100%;
     height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     background-color: var(--background-color);
     transition: move-right var(--animation-move-duration) ease-in-out,
     move-left var(--animation-move-duration) ease-in-out;
@@ -80,11 +76,13 @@
 .dashboard__main-container__notes-container__header-container,
 .dashboard__main-container__note-container__header-container {
     grid-row: 1/2;
+    grid-column: 1/-1;
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: min-content;
     width: 100%;
+    max-width: 100%;
 }
 
 /* Headers styles */
@@ -108,18 +106,44 @@
 .dashboard__main-container__notes-container__content-container,
 .dashboard__main-container__note-container__content-container {
     grid-row: 2/-1;
+    grid-column: 1/-1;
     align-self: start;
+    display: grid;
+    grid-template-columns: subgrid;
+    align-items: start;
+    justify-items: center;
     width: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 /* Content styles */
+.dashboard__main-container__note-container__content-container,
 .dashboard__main-container__notes-container__content-container__content {
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    align-items: center;
-    gap: 1rem;
+    grid-column: 1/-1;
+    display: grid;
+    grid-template-columns: subgrid;
+    gap: 0.8rem 0;
     width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    animation: appear-and-move-a-bit-up var(--animation-move-duration) ease-in-out forwards;
+}
+
+.dashboard__main-container__note-container__content-container {
+    height: 100%;
+}
+
+.dashboard__main-container__note-container__content-container .text-area__main-container {
+    grid-column: 1/-1;
+    grid-row: 2/-1;
+    width: 100%;
+    height: 100%;
+}
+
+/* Content items styles */
+.dashboard__main-container__notes-container__content-container__content * {
+    grid-column: 1/-1;
 }
 
 /* Dashboard note view modal empty content styles */
